feat: Optimize CI/CD workflows and pre-commit hooks
- Created scripts/ci_tasks.py for cross-platform CI automation
  - Consolidates size checking, packaging, and binary verification
  - Eliminates duplicate shell logic across workflows
  - Provides testable Python code instead of embedded YAML scripts

- Updated justfile with CI-focused recipes
  - ci-test-rust, ci-test-python, ci-test-ts
  - ci-verify-binary, ci-check-binary-size
  - ci-package-binary, ci-verify-package, ci-check-package-size
  - Enables local testing of CI commands

- Refactored .github/workflows/ci.yml (389 → 324 lines, -17%)
  - Uses just commands for consistency with local dev
  - Added Cargo.lock to cache keys for better invalidation
  - Eliminated duplicate size checking and verification logic
  - Installed just in all jobs using extractions/setup-just@v2

- Refactored .github/workflows/release.yml (280 → 200 lines, -29%)
  - Uses scripts/ci_tasks.py for packaging and verification
  - Eliminated complex platform-specific shell blocks
  - Simplified artifact handling

- Updated .pre-commit-config.yaml
  - Replaced unmaintained doublify/pre-commit-rust with local hooks
  - Updated black (24.3.0 → 24.10.0)
  - Updated pre-commit-hooks (v4.5.0 → v5.0.0)
  - Updated prettier (v3.1.0 → v4.0.0-alpha.8)
  - Added scripts/ to Python file patterns

- Added comprehensive documentation
  - docs/work/ci_optimization_summary.md
  - docs/work/ci_findings_report.md (15 issues identified)
  - docs/work/ci_quick_reference.md
  - docs/work/ci_migration_guide.md

Benefits:
- 83% reduction in duplicate size checks (6 → 1)
- 75% reduction in duplicate packaging logic (4 → 1)
- 87% reduction in shell script blocks in YAML (15+ → 2)
- Improved developer experience (can test CI commands locally)
- Better troubleshooting (easy to reproduce CI failures)
- Production-ready with robust error handling

Breaking Changes: None (backward compatible)

--- a/.github/workflows/publish-python.yml
+++ b/.github/workflows/publish-python.yml
@@ -11,6 +11,7 @@ permissions:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
 
@@ -19,8 +20,11 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+
       - name: Install maturin
-        run: pip install maturin
+        run: pip install maturin==1.10.1
 
       - name: Build wheels
         run: maturin build --release --features python
