--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,9 @@ env:
   CARGO_TERM_COLOR: always
   RUST_BACKTRACE: 1
   CARGO_INCREMENTAL: 0
-  MATURIN_VERSION: 1.7.4
-  PYTEST_VERSION: 7.4.2
-  CACHE_VERSION: v2 # Increment to bust all caches
+  CACHE_VERSION: v3 # Increment to bust all caches
+  CLI_MAX_BYTES: "52428800" # 50MB
+  WASM_MAX_BYTES: "1048576" # 1MB
 
 jobs:
   lint:
@@ -48,9 +48,9 @@ jobs:
             ~/.cargo/registry/cache
             ~/.cargo/git/db
             target
-          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo-build
+          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
-            ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo-build
+            ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo-
 
       - name: Run rustfmt
         run: cargo fmt --all --check
@@ -81,6 +81,9 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
+      - name: Install just
+        uses: extractions/setup-just@v2
+
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
@@ -89,12 +92,12 @@ jobs:
             ~/.cargo/registry/cache
             ~/.cargo/git/db
             target
-          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo
+          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
-            ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo
+            ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo-
 
       - name: Run unit tests
-        run: cargo test --verbose --workspace --features cli
+        run: just ci-test-rust
 
       - name: Build release CLI binary (verify)
         run: |
@@ -107,7 +110,6 @@ jobs:
           CLI_BIN=$(python3 scripts/resolve_rust_binary.py --workspace "$(pwd)" --name sea --profile release --target-triple ${{ matrix.target }} --require-executable)
           echo "Resolved CLI binary: $CLI_BIN"
           echo "CLI_BIN=$CLI_BIN" >> "$GITHUB_ENV"
-          echo "CLI_BIN_DIR=$(dirname "$CLI_BIN")" >> "$GITHUB_ENV"
 
       - name: Resolve CLI binary path (windows)
         if: matrix.os == 'windows-latest'
@@ -117,64 +119,12 @@ jobs:
           $cliBin = python scripts/resolve_rust_binary.py --workspace "$workspace" --name sea --profile release --target-triple ${{ matrix.target }} --require-executable
           Write-Host "Resolved CLI binary: $cliBin"
           "CLI_BIN=$cliBin" >> $env:GITHUB_ENV
-          $cliDir = Split-Path -Parent $cliBin
-          "CLI_BIN_DIR=$cliDir" >> $env:GITHUB_ENV
 
-      - name: Run CLI binary (--version) to verify runtime (non-windows)
-        if: matrix.os != 'windows-latest'
-        run: |
-          echo "Using CLI binary: $CLI_BIN"
-          export LD_LIBRARY_PATH="$CLI_BIN_DIR:$LD_LIBRARY_PATH"
-          export DYLD_LIBRARY_PATH="$CLI_BIN_DIR:$DYLD_LIBRARY_PATH"
-          "$CLI_BIN" --version || (echo "::error::Failed to run CLI binary"; ls -la "$CLI_BIN_DIR"; exit 1)
+      - name: Verify CLI binary executes
+        run: just ci-verify-binary "${{ env.CLI_BIN }}"
 
-      - name: Check CLI binary size (non-windows)
-        if: matrix.os != 'windows-latest'
-        run: |
-          SIZE=$(python3 -c 'import os; print(os.path.getsize(os.environ["CLI_BIN"]))')
-          echo "CLI binary size: $SIZE bytes"
-          if [ "$SIZE" -gt 52428800 ]; then
-            echo "::error::CLI binary exceeds 50MB ($SIZE bytes)";
-            exit 1
-          fi
-
-      - name: Run CLI binary (--version) to verify runtime (windows)
-        if: matrix.os == 'windows-latest'
-        shell: pwsh
-        run: |
-          Write-Host "Using CLI binary: $env:CLI_BIN"
-          $binDir = $env:CLI_BIN_DIR
-          $env:PATH = "$binDir;$env:PATH"
-          & "$env:CLI_BIN" --version
-
-      - name: Check CLI binary size (windows)
-        if: matrix.os == 'windows-latest'
-        shell: pwsh
-        run: |
-          $size = (Get-Item "$env:CLI_BIN").Length
-          Write-Host "CLI binary size: $size bytes"
-          if ($size -gt 52428800) { Write-Error "CLI binary exceeds 50MB ($size)"; exit 1 }
-
-      - name: Verify CLI binary exists (non-windows)
-        if: matrix.os != 'windows-latest'
-        run: |
-          if [ -f "$CLI_BIN" ]; then
-            echo "Verified CLI binary at $CLI_BIN"
-          else
-            echo "::error::CLI binary not found at $CLI_BIN"
-            exit 1
-          fi
-
-      - name: Verify CLI binary exists (windows)
-        if: matrix.os == 'windows-latest'
-        shell: pwsh
-        run: |
-          if (Test-Path $env:CLI_BIN -PathType Leaf) {
-            Write-Host "Verified CLI binary at $env:CLI_BIN"
-          } else {
-            Write-Error "CLI binary not found at expected path: $env:CLI_BIN"
-            exit 1
-          }
+      - name: Check CLI binary size
+        run: just ci-check-binary-size "${{ env.CLI_BIN }}" "${{ env.CLI_MAX_BYTES }}"
 
   test-python:
     name: Test Python (${{ matrix.python-version }})
@@ -184,7 +134,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.11", "3.12"] # Removed 3.9, 3.10 (pyproject.toml requires >=3.11)
+        python-version: ["3.11", "3.12"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -197,6 +147,9 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
 
+      - name: Install just
+        uses: extractions/setup-just@v2
+
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
@@ -205,29 +158,16 @@ jobs:
             ~/.cargo/registry/cache
             ~/.cargo/git/db
             target
-          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-py${{ matrix.python-version }}
+            .venv
+          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-py${{ matrix.python-version }}-${{ hashFiles('**/Cargo.lock', 'requirements*.txt') }}
           restore-keys: |
-            ${{ runner.os }}-${{ env.CACHE_VERSION }}-py${{ matrix.python-version }}
+            ${{ runner.os }}-${{ env.CACHE_VERSION }}-py${{ matrix.python-version }}-
 
-      - name: Create virtualenv
-        run: python -m venv .venv
-
-      - name: Install dependencies
-        run: |
-          source .venv/bin/activate
-          pip install maturin==1.10.1 pytest==8.3.4
-
-      - name: Build Python bindings
-        run: |
-          source .venv/bin/activate
-          maturin develop
+      - name: Setup Python environment
+        run: just python-setup
 
       - name: Run Python tests
-        run: |
-          source .venv/bin/activate
-          pytest tests/
-
-  # Minimal integration job to verify registry ambiguity flag behavior will be added after TypeScript tests
+        run: just ci-test-python
 
   test-typescript:
     name: Test TypeScript
@@ -246,13 +186,18 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
 
+      - name: Install just
+        uses: extractions/setup-just@v2
+
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
           path: |
             ~/.cargo/registry/index
             sea-core/target
-          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-ts
+          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-ts-${{ hashFiles('**/Cargo.lock', 'package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ env.CACHE_VERSION }}-ts-
 
       - name: Install dependencies
         run: npm ci
@@ -261,7 +206,7 @@ jobs:
         run: npm run build
 
       - name: Run TypeScript tests
-        run: npm test
+        run: just ci-test-ts
 
   test-integration:
     name: Minimal Integration Check
@@ -291,7 +236,7 @@ jobs:
         shell: bash
         run: |
           tmpdir=$(mktemp -d)
-          tee "$tmpdir/.sea-registry.toml" > /dev/null << 'EOF'
+          tee "$tmpdir/.sea-registry.toml" > /dev/null <<'EOF'
           version = 1
           default_namespace = "default"
 
@@ -337,6 +282,9 @@ jobs:
         with:
           targets: wasm32-unknown-unknown
 
+      - name: Install just
+        uses: extractions/setup-just@v2
+
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
@@ -345,9 +293,9 @@ jobs:
             ~/.cargo/registry/cache
             ~/.cargo/git/db
             target
-          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-wasm
+          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-wasm-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
-            ${{ runner.os }}-${{ env.CACHE_VERSION }}-wasm
+            ${{ runner.os }}-${{ env.CACHE_VERSION }}-wasm-
 
       - name: Install wasm-pack
         run: cargo install wasm-pack --locked
@@ -359,16 +307,8 @@ jobs:
 
       - name: Check bundle size
         run: |
-          SIZE=$(stat -c%s "sea-core/pkg/sea_core_bg.wasm")
-          echo "WASM bundle size: $SIZE bytes"
-          if [ -z "$SIZE" ] || ! [[ "$SIZE" =~ ^[0-9]+$ ]]; then
-            echo "::error::Unable to determine WASM bundle size"
-            exit 1
-          fi
-          if [ "$SIZE" -gt 1048576 ]; then
-            echo "::error::WASM bundle exceeds 1MB limit ($SIZE bytes)"
-            exit 1
-          fi
+          WASM_FILE="sea-core/pkg/sea_core_bg.wasm"
+          python3 scripts/ci_tasks.py check-size --file "$WASM_FILE" --max-bytes "${{ env.WASM_MAX_BYTES }}" --label "WASM bundle"
 
   security:
     name: Security Audit
