--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -10,7 +10,7 @@ homepage = "https://github.com/GodSpeedAI/DomainForge"
 repository = "https://github.com/GodSpeedAI/DomainForge"
 
 [dependencies]
-uuid = { version = "1.10", features = ["v4", "v5", "v7", "serde"] }
+uuid = { version = "=1.8.0", features = ["v4", "v5", "v7", "serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
