--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -66,7 +66,7 @@ crate-type = ["rlib", "cdylib"]
 default = []
 python = ["pyo3", "pythonize"]
 typescript = ["napi", "napi-derive"]
-wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
+wasm = ["wasm-bindgen", "serde-wasm-bindgen", "uuid/js"]
 shacl = ["oxigraph"]
 cli = ["three_valued_logic", "clap", "colored"]
 three_valued_logic = []
