feat: implement pattern semantics (Phase 1, Step 3)
- Added Pattern primitive with regex validation and caching
- Implemented 'matches' operator for pattern-based policy checks
- Extended grammar, AST, and parser for pattern declarations
- Integrated patterns into graph registration and policy evaluation
- Exported patterns to CALM, KG (RDF/Turtle), and SBVR outputs
- Exposed pattern counts through Python, TypeScript, and WASM bindings
- Added comprehensive pattern_semantics_tests.rs covering:
  * Pattern parsing and regex validation
  * Pattern usage in policies
  * Error handling for invalid patterns
  * Pattern reuse across multiple policies

Testing:
✅ All Rust tests pass (cargo test --features cli)
✅ All Python tests pass (43 tests)
✅ All TypeScript tests pass (57 tests)
✅ cargo clippy -- -D warnings (clean)
✅ cargo fmt (clean)

Implements: docs/plans/dsl-completeness-roadmap.md Phase 1, Item 3

--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -26,6 +26,8 @@ log = "0.4.21"
 globset = "0.4"
 globwalk = "0.9"
 toml = { version = "0.8", features = ["parse"] }
+regex = "1.11"
+once_cell = "1.19"
 pyo3 = { version = "0.24.1", features = ["extension-module"], optional = true }
 pythonize = { version = "0.24", optional = true }
 napi = { version = "2.16", features = ["async"], optional = true }
