--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -30,7 +30,7 @@ regex = "1.11"
 once_cell = "1.19"
 pyo3 = { version = "0.24.1", features = ["extension-module"], optional = true }
 pythonize = { version = "0.24", optional = true }
-napi = { version = "2.16", features = ["async"], optional = true }
+napi = { version = "2.16", features = ["async", "dyn-symbols"], optional = true }
 napi-derive = { version = "2.16", optional = true }
 wasm-bindgen = { version = "0.2", optional = true }
 serde-wasm-bindgen = { version = "0.6", optional = true }
@@ -85,5 +85,4 @@ required-features = ["cli"]
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = false
-
 
