--- a/.github/workflows/release-npm.yml
+++ b/.github/workflows/release-npm.yml
@@ -12,10 +12,14 @@ permissions:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    env:
-      NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
     steps:
       - uses: actions/checkout@v4
+
+      - name: Decrypt secrets
+        id: secrets
+        uses: ./.github/actions/decrypt-secrets
+        with:
+          sops-age-key: ${{ secrets.SOPS_AGE_KEY }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -34,3 +38,5 @@ jobs:
 
       - name: Publish to npm
         run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ steps.secrets.outputs.npm-token }}
