--- a/.github/workflows/publish-python.yml
+++ b/.github/workflows/publish-python.yml
@@ -15,6 +15,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Decrypt secrets
+        id: secrets
+        uses: ./.github/actions/decrypt-secrets
+        with:
+          sops-age-key: ${{ secrets.SOPS_AGE_KEY }}
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -31,8 +37,8 @@ jobs:
         working-directory: sea-core
 
       - name: Publish to PyPI
-        # Only publish if PYPI_API_TOKEN secret is configured and this is a release event
-        if: secrets.PYPI_API_TOKEN != '' && github.event_name == 'release'
+        # Only publish if this is a release event and secrets were decrypted
+        if: github.event_name == 'release' && steps.secrets.outputs.pypi-api-token != ''
         env:
-          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+          MATURIN_PYPI_TOKEN: ${{ steps.secrets.outputs.pypi-api-token }}
         run: maturin upload --skip-existing sea-core/target/wheels/*.whl
