--- a/pkg/package.json
+++ b/pkg/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@domainforge/sea-wasm",
+  "name": "@sprime01/sea-wasm",
   "type": "module",
   "collaborators": [
     "DomainForge Contributors"
