--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -14,9 +14,9 @@ uuid = { version = "=1.8.0", features = ["v4", "v5", "v7", "serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
-icu_decimal = "1.5"
-icu_locid = "1.5"
-fixed_decimal = "0.5"
+icu_decimal = { version = "1.5", optional = true }
+icu_locid = { version = "1.5", optional = true }
+fixed_decimal = { version = "0.5", optional = true }
 rust_decimal = { version = "1.33", features = ["serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 pest = "2.7"
@@ -34,6 +34,7 @@ napi = { version = "2.16", features = ["async", "dyn-symbols"], optional = true 
 napi-derive = { version = "2.16", optional = true }
 wasm-bindgen = { version = "0.2", optional = true }
 serde-wasm-bindgen = { version = "0.6", optional = true }
+wee_alloc = { version = "0.4.5", optional = true }
 percent-encoding = "2.3.2"
 roxmltree = "0.21.1"
 oxigraph = { version = "0.3", optional = true }
@@ -69,9 +70,10 @@ crate-type = ["rlib", "cdylib"]
 default = []
 python = ["pyo3", "pythonize"]
 typescript = ["napi", "napi-derive"]
-wasm = ["wasm-bindgen", "serde-wasm-bindgen", "uuid/js"]
+wasm = ["wasm-bindgen", "serde-wasm-bindgen", "uuid/js", "wee_alloc"]
 shacl = ["oxigraph"]
-cli = ["three_valued_logic", "clap", "colored"]
+formatting = ["icu_decimal", "icu_locid", "fixed_decimal"]
+cli = ["three_valued_logic", "clap", "colored", "formatting"]
 three_valued_logic = []
 
 ## NOTE: Profiles are managed at the workspace root (Cargo.toml). Please
@@ -85,4 +87,4 @@ path = "src/bin/sea.rs"
 required-features = ["cli"]
 
 [package.metadata.wasm-pack.profile.release]
-wasm-opt = false
+wasm-opt = true
