--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -75,7 +75,7 @@ typescript = ["napi", "napi-derive"]
 wasm = ["wasm-bindgen", "serde-wasm-bindgen", "uuid/js", "lol_alloc"]
 shacl = ["oxigraph"]
 formatting = ["icu_decimal", "icu_locid", "fixed_decimal"]
-cli = ["three_valued_logic", "clap", "colored", "formatting"]
+cli = ["three_valued_logic", "clap", "colored"]
 three_valued_logic = []
 
 ## NOTE: Profiles are managed at the workspace root (Cargo.toml). Please
