feat: Update dependencies and add new packages
- Added new dependencies including `atomic-waker`, `fnv`, `futures-*`, `http`, `hyper`, `reqwest`, and others to enhance functionality and performance.
- Introduced `LICENSE-MIT` file to support dual licensing under MIT and Apache 2.0.
- Updated `README.md` to reflect the new licensing options.
- Refactored DSL architecture documentation to clarify parser contracts and evaluator validation.
- Enhanced CI pipeline to include package size checks.
- Updated `package.json`, `pyproject.toml`, and `Cargo.toml` to reflect new license information.
- Improved AST generation by sorting entities and resources for consistency.
- Added methods to the `Profile` struct for better encapsulation.
- Implemented a new casting method in the `Expression` struct for cleaner code.
- Enhanced quantity formatting with `FixedDecimal` for better precision.
- Updated the `NamespaceRegistry` to return results for better error handling.
- Improved HTTP resource definitions in the DSL for clarity and completeness.
- Enhanced round-trip tests to ensure structural integrity of graphs.
- Fixed temporary file creation in standard library tests for better reliability.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -302,20 +302,22 @@ jobs:
 
       - name: Install wasm-opt (binaryen) for optimization
         run: |
+          set -euo pipefail
           echo "Downloading wasm-opt..."
-          wget -q https://github.com/WebAssembly/binaryen/releases/download/version_117/binaryen-version_117-x86_64-linux.tar.gz
+          wget https://github.com/WebAssembly/binaryen/releases/download/version_117/binaryen-version_117-x86_64-linux.tar.gz
           tar -xzf binaryen-version_117-x86_64-linux.tar.gz
           sudo cp binaryen-version_117/bin/wasm-opt /usr/local/bin/
           wasm-opt --version
 
       - name: Build WASM (release)
         run: |
+          set -euo pipefail
           cd sea-core
           wasm-pack build --target web --release --features wasm
           # Optional: optimize with wasm-opt if installed (binaryen)
           if command -v wasm-opt &> /dev/null; then
             echo "🔧 Running wasm-opt..."
-            wasm-opt -Oz -o pkg/sea_core_bg_opt.wasm pkg/sea_core_bg.wasm && mv pkg/sea_core_bg_opt.wasm pkg/sea_core_bg.wasm || true
+            wasm-opt -Oz -o pkg/sea_core_bg_opt.wasm pkg/sea_core_bg.wasm && mv pkg/sea_core_bg_opt.wasm pkg/sea_core_bg.wasm
           fi
 
       - name: Check bundle size
