--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["DomainForge Contributors"]
 edition = "2021"
 rust-version = "1.77"
 description = "Rust core library implementing the SEA DSL primitives and validation engine."
-license = "Apache-2.0"
+license = "MIT OR Apache-2.0"
 homepage = "https://github.com/GodSpeedAI/DomainForge"
 repository = "https://github.com/GodSpeedAI/DomainForge"
 
@@ -47,12 +47,11 @@ anyhow = "1.0.100"
 getrandom = { version = "0.3", features = ["wasm_js"] }
 
 [dev-dependencies]
-proptest = { version = "1.0", default-features = false, features = ["std", "bit-set"] }
+proptest = { version = "1.0", features = ["std", "bit-set"] }
 wasm-bindgen-test = "0.3"
-jsonschema = { version = "0.18", default-features = false }
+jsonschema = { version = "0.18" }
 roxmltree = "0.21.1"
 rust_decimal_macros = "1.33"
-
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 tempfile = "3.12"
 assert_cmd = "2.0"
