--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -22,3 +22,6 @@ jobs:
         with:
           fail-on-severity: critical # Only fail on critical severity to be conservative
           allow-licenses: MIT, Apache-2.0, BSD-3-Clause, ISC
+          # Allow dependencies with non-standard SPDX license expressions (e.g., Apache-2.0/MIT)
+          # These are typically dual-licensed and safe, but use non-standard separators
+          allow-dependencies-licenses: pkg:cargo/minicov
