--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -317,7 +317,7 @@ jobs:
           # Optional: optimize with wasm-opt if installed (binaryen)
           if command -v wasm-opt &> /dev/null; then
             echo "🔧 Running wasm-opt..."
-            wasm-opt -Oz -o pkg/sea_core_bg_opt.wasm pkg/sea_core_bg.wasm && mv pkg/sea_core_bg_opt.wasm pkg/sea_core_bg.wasm
+            wasm-opt -Oz --enable-bulk-memory -o pkg/sea_core_bg_opt.wasm pkg/sea_core_bg.wasm && mv pkg/sea_core_bg_opt.wasm pkg/sea_core_bg.wasm
           fi
 
       - name: Check bundle size
